Fix z-index issue on Hero

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,6 +141,8 @@ background-repeat: no-repeat;
 background-position: 48% 42%;
 width: 100%;
 height: 100%;
+  z-index: -2;
+
 }
 
 #bg {
